packaged-src/main/default/objects/EduTrack__Exam__c/fields/EduTrack__Anlog__c.field-meta.xml
<CustomField>
    <fullName>Anlog__c</fullName>
    <label>Anlog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>