packaged-src/main/default/objects/EduTrack__Exam__c/fields/EduTrack__Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Exams</relationshipLabel>
    <relationshipName>Exams</relationshipName>
    <type>Lookup</type>
</CustomField>