packaged-src/main/default/objects/EduTrack__Exam__c/fields/EduTrack__Hindi__c.field-meta.xml
<CustomField>
    <fullName>Hindi__c</fullName>
    <label>Hindi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>