packaged-src/main/default/objects/EduTrack__Exam__c/fields/EduTrack__Moral_Science__c.field-meta.xml
<CustomField>
    <fullName>Moral_Science__c</fullName>
    <label>Moral Science</label>
    <length>255</length>
    <type>Text</type>
</CustomField>