packaged-src/main/default/objects/EduTrack__Exam__c/fields/EduTrack__PET_Sports__c.field-meta.xml
<CustomField>
    <fullName>PET_Sports__c</fullName>
    <label>PET (Sports)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>