packaged-src/main/default/objects/EduTrack__Exam__c/fields/EduTrack__Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exams</relationshipLabel>
    <relationshipName>Exams</relationshipName>
    <type>Lookup</type>
</CustomField>