packaged-src/main/default/objects/EduTrack__Exam__c/fields/EduTrack__Telugu__c.field-meta.xml
<CustomField>
    <fullName>Telugu__c</fullName>
    <label>Telugu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>